# Machine-translation

./: .gitignore
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/architecture/: agent.cpp  train.cpp
backend/src/preprocessing/: get_data.cpp  preprocess_data.cpp
